--- a/index.html
+++ b/index.html
@@ -1,75 +1,122 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>English-edu by jaskobe</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-
-      <header>
-        <h1>English-edu</h1>
-        <p></p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/jaskobe/english-edu" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/jaskobe/english-edu/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/jaskobe/english-edu/tarball/master" class="button">TAR</a></li>
-          </ul>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>壹教壹学</title>
+    <!-- Bootstrap -->
+    <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style/mui.css" rel="stylesheet">
+    <link href="style/common.css" rel="stylesheet">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/mui.min.js"></script>
+    <style>
+        body{
+            background: #c0c0c0;
+        }
+    </style>
+</head>
+<body>
+<link href="style/index.css" rel="stylesheet">
+<header class="navbar">
+    <nav class="mui-container-fluid navbar-wrap">
+        <div class="nav-logo"></div>
+        <div class="nav-list">
+            <ul>
+                <a href="#"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="#"><li>网络课程</li></a>
+                <a href="#"><li>封闭课程</li></a>
+                <a href="#"><li>教学体系</li></a>
+                <a href="#"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="#"><li>战报战绩</li></a>
+            </ul>
         </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/jaskobe">jaskobe</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
+        <div class=" nav-btn"><i class="fa fa-bars"></i></div>
+    </nav>
+</header>
+<!-- 页面内容 -->
+<div class="section section1"></div>
+<div class="section section2">
+    <div class="section-container">
+        <h1>教学体系</h1>
+        <p>一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～</p>
+        <img src="img/index/2.jpg">
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+</div>
+<div class="section section3">
+    <div class="section-container">
+        <h1>战报战绩</h1>
+        <img src="img/index/3.jpg">
+    </div>
+</div>
+<div class="section section4">
+    <div class="section-container">
+        <h1>雅思顶尖名师团队，逢考必过</h1>
+        <h2>我们的老师经过5次以上选拔培训</h2>
+        <h3>1.0，2.0，3.0不断升级，调试为最优秀的师资系统</h3>
+        <div class="teacher-box">
+            <ul>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="teacher-card">
+                        <img src="img/index/teacher0.png">
+                        <div class="teacher-info">
+                            <h1>姓名</h1>
+                            <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                        </div>
+                    </div>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
+</div>
+</body>
 </html>
