--- a/templet.html
+++ b/templet.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>壹教壹学</title>
+    <!-- Bootstrap -->
+    <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style/common.css" rel="stylesheet">
+    <link href="style/mui.css" rel="stylesheet">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/mui.min.js"></script>
+    <style>
+        body{
+            background: #c0c0c0;
+        }
+    </style>
 </head>
 <body>
+<header class="navbar">
+    <nav class="mui-container-fluid navbar-wrap">
+        <div class="nav-logo"></div>
+        <div class="nav-list">
+            <ul>
+                <a href="#"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="#"><li>网络课程</li></a>
+                <a href="#"><li>封闭课程</li></a>
+                <a href="#"><li>教学体系</li></a>
+                <a href="#"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="#"><li>战报战绩</li></a>
+            </ul>
+        </div>
+        <div class=" nav-btn"><i class="fa fa-bars"></i></div>
+    </nav>
+</header>
+<!-- 页面内容 -->
 
 </body>
 </html>
