--- a/teachers.html
+++ b/teachers.html
@@ -24,18 +24,268 @@
         <div class="nav-logo"></div>
         <div class="nav-list">
             <ul>
-                <a href="#"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
-                <a href="#"><li>网络课程</li></a>
-                <a href="#"><li>封闭课程</li></a>
-                <a href="#"><li>教学体系</li></a>
-                <a href="#"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
-                <a href="#"><li>战报战绩</li></a>
+                <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="online-courses.html"><li>网络课程</li></a>
+                <a href="closed-courses.html"><li>封闭课程</li></a>
+                <a href="teaching-system.html"><li>教学体系</li></a>
+                <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="exploits.html"><li>战报战绩</li></a>
             </ul>
         </div>
         <div class=" nav-btn"><i class="fa fa-bars"></i></div>
     </nav>
 </header>
+
+<link rel="stylesheet" href="style/teachers.css">
 <!-- 页面内容 -->
+<div class="wrap">
+    <div class="banner-box"></div>
+    <div class="teacher-part-2">
+        <div class="section-container">
+            <img src="img/teachers/2.png" style="width: 90%">
+        </div>
+    </div>
+    <div class="teacher-box section-container">
+        <p class="title">听力招牌教师</p>
+        <img src="img/teachers/divide-line.png" class="divide-img">
+        <div class="teacher-card-box">
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">陈好老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+        </div>
+    </div>
+    <div class="teacher-box section-container">
+        <p class="title">口语招牌教师</p>
+        <img src="img/teachers/divide-line.png" class="divide-img">
+        <div class="teacher-card-box">
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+        </div>
+    </div>
+    <div class="teacher-box section-container">
+        <p class="title">阅读招牌教师</p>
+        <img src="img/teachers/divide-line.png" class="divide-img">
+        <div class="teacher-card-box">
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+        </div>
+    </div>
+    <div class="teacher-box section-container">
+        <p class="title">写作招牌教师</p>
+        <img src="img/teachers/divide-line.png" class="divide-img">
+        <div class="teacher-card-box">
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+            <div class="teacher-card">
+                <div class="photo-box">
+                    <img src="img/teachers/teacher-img.png">
+                    <img src="img/teachers/talk-cover.png" class="talk-cover">
+                </div>
+                <p class="teacher-name">王东老师</p>
+                <div class="mui-divider"></div>
+                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
