--- a/templet.html
+++ b/templet.html
@@ -24,12 +24,12 @@
         <div class="nav-logo"></div>
         <div class="nav-list">
             <ul>
-                <a href="#"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
-                <a href="#"><li>网络课程</li></a>
-                <a href="#"><li>封闭课程</li></a>
-                <a href="#"><li>教学体系</li></a>
-                <a href="#"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
-                <a href="#"><li>战报战绩</li></a>
+                <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="online-courses.html"><li>网络课程</li></a>
+                <a href="closed-courses.html"><li>封闭课程</li></a>
+                <a href="teaching-system.html"><li>教学体系</li></a>
+                <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="exploits.html"><li>战报战绩</li></a>
             </ul>
         </div>
         <div class=" nav-btn"><i class="fa fa-bars"></i></div>
