--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link href="style/index.css" rel="stylesheet">
 <header class="navbar">
     <nav class="mui-container-fluid navbar-wrap">
-        <div class="nav-logo"></div>
+        <a href="index.html"><div class="nav-logo"></div></a>
         <div class="nav-list">
             <ul>
                 <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
@@ -37,12 +37,34 @@
     </nav>
 </header>
 <!-- 页面内容 -->
-<div class="section section1"></div>
+<div class="section section1">
+    <img src="img/index/banner-txt.png" class="banner-txt">
+    <a href="#"><img src="img/index/banner-circle.png" class="banner-circle"></a>
+</div>
 <div class="section section2">
     <div class="section-container">
-        <h1>教学体系</h1>
+        <h1>壹教壹学雅思课堂体系</h1>
         <p>一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～</p>
-        <img src="img/index/2.jpg">
+        <div class="index-system-box">
+            <div class="index-system-card card1">
+                <img src="img/index/icon-1.png">
+                <div class="index-system-card-txt">
+                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                </div>
+            </div>
+            <div class="index-system-card card2">
+                <img src="img/index/icon-2.png">
+                <div class="index-system-card-txt">
+                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                </div>
+            </div>
+            <div class="index-system-card card3">
+                <img src="img/index/icon-3.png">
+                <div class="index-system-card-txt">
+                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div class="section section3">
@@ -116,6 +138,24 @@
 
             </ul>
         </div>
+    </div>
+</div>
+
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+            <a><li >战报战绩</li></a>
+        </ul>
     </div>
 </div>
 </body>
