--- a/online-courses.html
+++ b/online-courses.html
@@ -1,10 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>壹教壹学</title>
+    <!-- Bootstrap -->
+    <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style/common.css" rel="stylesheet">
+    <link href="style/mui.css" rel="stylesheet">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/mui.min.js"></script>
 </head>
 <body>
+<header class="navbar">
+    <nav class="mui-container-fluid navbar-wrap">
+        <a href="index.html"><div class="nav-logo"></div></a>
+        <div class="nav-list">
+            <ul>
+                <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="online-courses.html"><li>网络课程</li></a>
+                <a href="closed-courses.html"><li>封闭课程</li></a>
+                <a href="teaching-system.html"><li>教学体系</li></a>
+                <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="exploits.html"><li>战报战绩</li></a>
+            </ul>
+        </div>
+        <div class=" nav-btn"><i class="fa fa-bars"></i></div>
+    </nav>
+</header>
+<!--私有样式-->
+<link href="style/online-courses.css" rel="stylesheet">
+<!-- 页面内容 -->
+<div class="wrap">
+    <div class="oc-banner-box"></div>
+    <div class="oc-part oc-part1">
+        <div class="section-container">
+            <p class="title">网络课程概览</p>
+            <img class="divide-img" src="img/divide-line.png">
+            <div class="oc-part1-txt">
+                此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍。
+            </div>
+        </div>
+    </div>
+    <div class="oc-part oc-part2">
+        <div class="section-container">
+            <p class="title orange">精品技巧班</p>
+            <img class="divide-img" src="img/divide-line.png">
+            <div class="oc-card-box">
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="oc-part oc-part3">
+        <div class="section-container">
+            <p class="title orange">招牌预测班</p>
+            <img class="divide-img" src="img/divide-line.png">
+            <div class="oc-card-box">
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="oc-part oc-part4">
+        <div class="section-container">
+            <p class="title orange">提分结构班</p>
+            <img class="divide-img" src="img/divide-line.png">
+            <div class="oc-card-box">
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+                <div class="oc-card">
+                    <img src="img/online-courses/5.jpg">
+                    <p>屠鸭联盟 黄瀚生Frank9月换题季口语预测班</p>
+                    <b class="price-tag orange">¥<span class="price-num">388.00</span></b>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--私有JS-->
 
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+            <a><li >战报战绩</li></a>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
