--- a/teachers.html
+++ b/teachers.html
@@ -21,7 +21,7 @@
 <body>
 <header class="navbar">
     <nav class="mui-container-fluid navbar-wrap">
-        <div class="nav-logo"></div>
+        <a href="index.html"><div class="nav-logo"></div></a>
         <div class="nav-list">
             <ul>
                 <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
@@ -35,7 +35,7 @@
         <div class=" nav-btn"><i class="fa fa-bars"></i></div>
     </nav>
 </header>
-
+<!--私有样式-->
 <link rel="stylesheet" href="style/teachers.css">
 <!-- 页面内容 -->
 <div class="wrap">
@@ -47,7 +47,7 @@
     </div>
     <div class="teacher-box section-container">
         <p class="title">听力招牌教师</p>
-        <img src="img/teachers/divide-line.png" class="divide-img">
+        <img src="img/divide-line.png" class="divide-img">
         <div class="teacher-card-box">
             <div class="teacher-card">
                 <div class="photo-box">
@@ -107,7 +107,7 @@
     </div>
     <div class="teacher-box section-container">
         <p class="title">口语招牌教师</p>
-        <img src="img/teachers/divide-line.png" class="divide-img">
+        <img src="img/divide-line.png" class="divide-img">
         <div class="teacher-card-box">
             <div class="teacher-card">
                 <div class="photo-box">
@@ -167,7 +167,7 @@
     </div>
     <div class="teacher-box section-container">
         <p class="title">阅读招牌教师</p>
-        <img src="img/teachers/divide-line.png" class="divide-img">
+        <img src="img/divide-line.png" class="divide-img">
         <div class="teacher-card-box">
             <div class="teacher-card">
                 <div class="photo-box">
@@ -227,7 +227,7 @@
     </div>
     <div class="teacher-box section-container">
         <p class="title">写作招牌教师</p>
-        <img src="img/teachers/divide-line.png" class="divide-img">
+        <img src="img/divide-line.png" class="divide-img">
         <div class="teacher-card-box">
             <div class="teacher-card">
                 <div class="photo-box">
@@ -287,5 +287,22 @@
     </div>
 </div>
 
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+            <a><li >战报战绩</li></a>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
