--- a/templet.html
+++ b/templet.html
@@ -12,16 +12,11 @@
     <link href="style/mui.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/mui.min.js"></script>
-    <style>
-        body{
-            background: #c0c0c0;
-        }
-    </style>
 </head>
 <body>
 <header class="navbar">
     <nav class="mui-container-fluid navbar-wrap">
-        <div class="nav-logo"></div>
+        <a href="index.html"><div class="nav-logo"></div></a>
         <div class="nav-list">
             <ul>
                 <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
@@ -35,7 +30,30 @@
         <div class=" nav-btn"><i class="fa fa-bars"></i></div>
     </nav>
 </header>
-<!-- 页面内容 -->
+<!--私有样式-->
 
+<!-- 页面内容 -->
+<div class="wrap">
+
+</div>
+<!--私有JS-->
+
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+            <a><li >战报战绩</li></a>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
