add:system page

--- a/teaching-system.html
+++ b/teaching-system.html
@@ -1,10 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>壹教壹学</title>
+    <!-- Bootstrap -->
+    <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style/common.css" rel="stylesheet">
+    <link href="style/mui.css" rel="stylesheet">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/mui.min.js"></script>
 </head>
 <body>
+<header class="navbar">
+    <nav class="mui-container-fluid navbar-wrap">
+        <a href="index.html"><div class="nav-logo"></div></a>
+        <div class="nav-list">
+            <ul>
+                <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="online-courses.html"><li>网络课程</li></a>
+                <a href="closed-courses.html"><li>封闭课程</li></a>
+                <a href="teaching-system.html"><li>教学体系</li></a>
+                <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+                <a href="exploits.html"><li>战报战绩</li></a>
+            </ul>
+        </div>
+        <div class=" nav-btn"><i class="fa fa-bars"></i></div>
+    </nav>
+</header>
+<!--私有样式-->
+<link rel="stylesheet" href="style/teaching-system.css">
+<!-- 页面内容 -->
+<div class="wrap">
+    <div class="system-banner-box">
+        <div class="section-container">
+            <div style="float: right">
+                <div class="system-banner-top">
+                    成千上万的雅思学员选择壹教壹学的课程，<br/>
+                    帮你有效提升英语语言能力，提高雅思分数！
+                </div>
+                <div class="system-banner-bot">
+                    无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="system-part system-part2">
+        <div class="section-container">
+            <p class="title">壹教壹学雅思课程体系</p>
+            <div class="system-part2-content">
+                <div class="book-box">
+                    <img src="img/teaching-system/books.png">
+                    <p>前期预习</p>
+                </div>
+                <div class="system-part2-content-box">
+                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                    <ul>
+                        <li>
+                            <img src="img/teaching-system/earphone.png">
+                            听力场景词汇
+                        </li>
+                        <li>
+                            <img src="img/teaching-system/open-book.png">
+                            阅读学术词汇
+                        </li>
+                        <li>
+                            <img src="img/teaching-system/lip.png">
+                            口语素材<br/>
+                            万能句型
+                        </li>
+                        <li>
+                            <img src="img/teaching-system/write.png">
+                            写作关键句翻译，<br/>
+                            句型改写，素材输入
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="system-part system-part3">
+        <div class="section-container">
+            <p class="title">正课</p>
+            <img src="img/teaching-system/ts-block.png" style="width: 100%">
+            <div class="zk-box zk-box1">
+                <div class="zk-box-left">
+                    <img src="img/teaching-system/earphone.png">
+                    听力
+                </div>
+                <div class="zk-box-right">
+                    文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍
+                </div>
+            </div>
+            <div class="zk-box zk-box2">
+                <div class="zk-box-left">
+                    <img src="img/teaching-system/lip.png">
+                    口语
+                </div>
+                <div class="zk-box-right">
+                    文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍
+                </div>
+            </div>
+            <div class="zk-box zk-box3">
+                <div class="zk-box-left">
+                    <img src="img/teaching-system/open-book.png">
+                    阅读
+                </div>
+                <div class="zk-box-right">
+                    文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍
+                </div>
+            </div>
+            <div class="zk-box zk-box4">
+                <div class="zk-box-left">
+                    <img src="img/teaching-system/write.png">
+                    写作
+                </div>
+                <div class="zk-box-right">
+                    文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍文字介绍
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="system-part system-part4">
+        <div class="section-container">
+            <img src="img/teaching-system/5.png" style="width: 100%">
+        </div>
+    </div>
+</div>
+<!--私有JS-->
 
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+            <a><li >战报战绩</li></a>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
