--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="style/common.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/mui.min.js"></script>
+    <script src="js/common.js"></script>
     <style>
         body{
             background: #c0c0c0;
@@ -21,7 +22,7 @@
 <body>
 <link href="style/index.css" rel="stylesheet">
 <header class="navbar">
-    <nav class="mui-container-fluid navbar-wrap">
+    <nav class="navbar-wrap">
         <a href="index.html"><div class="nav-logo"></div></a>
         <div class="nav-list">
             <ul>
