--- a/teaching-system.html
+++ b/teaching-system.html
@@ -12,10 +12,11 @@
     <link href="style/mui.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/mui.min.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
 <header class="navbar">
-    <nav class="mui-container-fluid navbar-wrap">
+    <nav class="navbar-wrap">
         <a href="index.html"><div class="nav-logo"></div></a>
         <div class="nav-list">
             <ul>
@@ -148,5 +149,6 @@
         </ul>
     </div>
 </div>
+
 </body>
 </html>
